<resources>

    <string name="app_name" translatable="false">SpeedServer</string>
    <string name="slogan">The best hostings</string>
    <string name="botongo">Go</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="username_hint">username</string>
    <string name="LoginButton_text">LOGIN</string>
    <string name="RegButton_text">REGISTER</string>
    <string name="signup_text">have you got an account? Register</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="signup_button_label">email</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_music_title">Music</string>
    <string name="bottom_nav_places_title">Places</string>
    <string name="bottom_nav_news_title">News</string>

</resources>